--- a/notebooks/one_repair_lvl_many_models_income_GA/Folk_GA_2018_Batch2.ipynb
+++ b/notebooks/one_repair_lvl_many_models_income_GA/Folk_GA_2018_Batch2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "0c2dd71a",
+   "id": "b3d06ac4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8c613416",
+   "id": "4d3d0acc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f4e96695",
+   "id": "07cb2bb2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ccb2099c",
+   "id": "1136df3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7ffcec7b",
+   "id": "d68a1538",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1283c66a",
+   "id": "9b4f97d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8f870bfa",
+   "id": "20286f6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "46b68716",
+   "id": "9477d4bf",
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0af00116",
+   "id": "7e04cd10",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "9c6cc185",
+   "id": "1d3200e7",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dff34c95",
+   "id": "edc634f5",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e35599aa",
+   "id": "7965c527",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
     "DB_COLLECTION_NAME = 'one_repair_lvl_many_models'\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME)\n",
     "# FAIR_INTERVENTION_PARAMS_LST = [0.0, 0.7]\n",
-    "FAIR_INTERVENTION_PARAMS_LST = [0.0]\n",
+    "FAIR_INTERVENTION_PARAMS_LST = [0.7]\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', EXPERIMENT_NAME, 'folk_GA_2018_config.yaml')\n",
     "metrics_computation_config = create_config_obj(config_yaml_path=config_yaml_path)"
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23158e7c",
+   "id": "91b665d7",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b79e2225",
+   "id": "6903dff3",
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "40afeb6c",
+   "id": "abe262a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,8 +215,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "1aeb1858",
+   "execution_count": 14,
+   "id": "97bcc443",
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "333ebcac",
+   "id": "340c8f78",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -247,8 +247,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "fd59050f",
+   "execution_count": 15,
+   "id": "ea4a02fd",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
        "4   14   1   1  8300   20    1   2     2    33  20.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,8 +376,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "d7d62bf5",
+   "execution_count": 16,
+   "id": "b4099426",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
        "(15000, 10)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,17 +397,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "814aee11",
+   "execution_count": 17,
+   "id": "9dd6ac7b",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data for 2017 1-Year person survey for GA...\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -520,7 +513,7 @@
        "4   22   3   1  3800   51    0   1     1    71  30.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,8 +526,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "02e7b411",
+   "execution_count": 18,
+   "id": "ca0395f0",
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +536,7 @@
        "(15000, 10)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,8 +547,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "79eaa470",
+   "execution_count": 19,
+   "id": "175bc482",
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +663,7 @@
        "4   16   1   1  4000  231    0   1     6    54  15.0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,8 +676,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "fb143e03",
+   "execution_count": 20,
+   "id": "df47f04c",
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +686,7 @@
        "(15000, 10)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,8 +697,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "789f0057",
+   "execution_count": 21,
+   "id": "39138780",
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +813,7 @@
        "4   19   7   1  5860   36    1   2     1    51  40.0"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -833,8 +826,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "9f5400f7",
+   "execution_count": 22,
+   "id": "f60308ee",
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +836,7 @@
        "(15000, 10)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,8 +847,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "7deb9a46",
+   "execution_count": 23,
+   "id": "3788abbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,7 +857,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01afc80e",
+   "id": "c9ab2b68",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -872,7 +865,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55ecdcfb",
+   "id": "5c28cbe4",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -880,8 +873,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "bd6b050a",
+   "execution_count": 24,
+   "id": "c7b9a195",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,8 +885,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "96a5ff19",
+   "execution_count": 25,
+   "id": "a7b668ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -909,15 +902,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "aea3fc0f",
+   "execution_count": 26,
+   "id": "f9891821",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-26 18:10:52 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2023-07-26 18:16:18 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -927,7 +920,7 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.0]',\n",
+      " 'fair_intervention_params_lst': '[0.7]',\n",
       " 'model_init_seed': 100,\n",
       " 'session_uuid': '114a1071-264b-49e6-b298-23db4031e9c2'}\n",
       "\n",
@@ -938,7 +931,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-26 18:10:53 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2023-07-26 18:16:18 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -959,7 +952,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "378a7d4ec98b48d7a48be76128213161",
+       "model_id": "052cbc84985e46e792cb296db9aeae4e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -974,22 +967,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.0\n",
-      "2023/07/26, 18:12:14: Tuning LGBMClassifier...\n",
+      "intervention_param:  0.7\n",
+      "2023/07/26, 18:17:38: Tuning LGBMClassifier...\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
-      "2023/07/26, 18:13:02: Tuning for LGBMClassifier is finished [F1 score = 0.7730286231227277, Accuracy = 0.7986666666666666]\n",
+      "2023/07/26, 18:18:24: Tuning for LGBMClassifier is finished [F1 score = 0.7729479488071331, Accuracy = 0.798888888888889]\n",
       "\n",
-      "2023/07/26, 18:13:02: Tuning LogisticRegression...\n",
-      "2023/07/26, 18:13:28: Tuning for LogisticRegression is finished [F1 score = 0.7857566026547654, Accuracy = 0.8091111111111111]\n",
+      "2023/07/26, 18:18:24: Tuning LogisticRegression...\n",
+      "2023/07/26, 18:18:58: Tuning for LogisticRegression is finished [F1 score = 0.7824750725766121, Accuracy = 0.8064444444444444]\n",
       "\n",
-      "2023/07/26, 18:13:28: Tuning RandomForestClassifier...\n"
+      "2023/07/26, 18:18:58: Tuning RandomForestClassifier...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-26 18:34:58 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2023-07-26 18:38:16 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
@@ -997,14 +990,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/07/26, 18:34:58: Tuning for RandomForestClassifier is finished [F1 score = 0.7781106614210981, Accuracy = 0.806]\n",
+      "2023/07/26, 18:38:16: Tuning for RandomForestClassifier is finished [F1 score = 0.777440871005021, Accuracy = 0.8046666666666665]\n",
       "\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b7a21ada624b49b484a61857a77079f3",
+       "model_id": "181877afa5fb4bbb97444782018f1bbe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1018,7 +1011,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "92da15440fe34d12884ec6fd73c5b1f2",
+       "model_id": "1f7a9c2d844e4bd4a4739301904f9e0f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1032,7 +1025,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "10cdadf1a7b743e0b56f55ca74c39c33",
+       "model_id": "61d35844a946454ea3637aedda63d7f9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1113,6 +1106,7 @@
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
+      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n"
      ]
     },
@@ -1194,7 +1188,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
       "[LightGBM] [Warning] min_data_in_leaf is set=100, min_child_samples=20 will be ignored. Current value: min_data_in_leaf=100\n",
@@ -1263,7 +1256,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2681208d1f684e6297a5b9f7f725ed05",
+       "model_id": "013e2b32c13a4823bc0fec398258a7f5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1277,7 +1270,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7198f140d7ea47a7a8c2f0c7399186ad",
+       "model_id": "be0c959b1bf54347a8568c124865bf78",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1308,7 +1301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "916ff35d",
+   "id": "62b00f0b",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -1317,7 +1310,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "654336ae",
+   "id": "b6b851ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1340,7 +1333,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "39349f6e",
+   "id": "cb2ad53d",
    "metadata": {},
    "outputs": [
     {
@@ -1565,7 +1558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8702165",
+   "id": "817b4bb1",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -1573,7 +1566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb210933",
+   "id": "20eb2996",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1581,7 +1574,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4664b64a",
+   "id": "08ed3e7d",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1589,7 +1582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a09dc7e",
+   "id": "fb7ffa34",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1598,7 +1591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cc48d58",
+   "id": "6b26a886",
    "metadata": {},
    "outputs": [],
    "source": []
