--- a/notebooks/Demography_Composition.ipynb
+++ b/notebooks/Demography_Composition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 79,
    "metadata": {
     "collapsed": true
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 80,
    "outputs": [],
    "source": [
     "import os\n",
@@ -38,13 +38,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 81,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current location:  /home/denys_herasymuk\n"
+      "Current location:  /\n"
      ]
     }
    ],
@@ -61,12 +61,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 82,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "from virny.datasets.data_loaders import ACSPublicCoverageDataset\n",
+    "from virny.datasets.data_loaders import LawSchoolDataset\n",
     "from virny.utils.protected_groups_partitioning import create_test_protected_groups"
    ],
    "metadata": {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 83,
    "outputs": [],
    "source": [
     "def get_proportions(protected_groups, X_data):\n",
@@ -99,10 +99,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 84,
    "outputs": [],
    "source": [
-    "sensitive_attributes_dct = {'SEX': '2', 'RAC1P': ['2', '3', '4', '5', '6', '7', '8', '9'], 'SEX & RAC1P': None}"
+    "sensitive_attributes_dct = {'male': '0.0', 'race': 'Non-White', 'male & race': None}"
    ],
    "metadata": {
     "collapsed": false
@@ -110,20 +110,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 85,
    "outputs": [
     {
      "data": {
-      "text/plain": "  SCHL MAR SEX DIS ESP CIT MIG MIL ANC NATIVITY DEAR DEYE DREM ESR ST FER  \\\n0   19   5   1   2   0   1   3   4   1        1    2    2    2   6  6   0   \n1   16   5   1   2   0   3   3   4   4        1    2    2    2   1  6   0   \n2   13   5   2   2   1   1   1   0   2        1    2    2    2   6  6   2   \n3   20   1   2   2   0   4   1   4   1        2    2    2    2   6  6   2   \n4   16   1   2   2   0   4   1   4   1        2    2    2    2   6  6   0   \n\n  RAC1P  AGEP   PINCP  \n0     1    21  3150.0  \n1     9    18  1600.0  \n2     1    16     0.0  \n3     8    43     0.0  \n4     6    54     0.0  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>SCHL</th>\n      <th>MAR</th>\n      <th>SEX</th>\n      <th>DIS</th>\n      <th>ESP</th>\n      <th>CIT</th>\n      <th>MIG</th>\n      <th>MIL</th>\n      <th>ANC</th>\n      <th>NATIVITY</th>\n      <th>DEAR</th>\n      <th>DEYE</th>\n      <th>DREM</th>\n      <th>ESR</th>\n      <th>ST</th>\n      <th>FER</th>\n      <th>RAC1P</th>\n      <th>AGEP</th>\n      <th>PINCP</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>19</td>\n      <td>5</td>\n      <td>1</td>\n      <td>2</td>\n      <td>0</td>\n      <td>1</td>\n      <td>3</td>\n      <td>4</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>6</td>\n      <td>6</td>\n      <td>0</td>\n      <td>1</td>\n      <td>21</td>\n      <td>3150.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>16</td>\n      <td>5</td>\n      <td>1</td>\n      <td>2</td>\n      <td>0</td>\n      <td>3</td>\n      <td>3</td>\n      <td>4</td>\n      <td>4</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>6</td>\n      <td>0</td>\n      <td>9</td>\n      <td>18</td>\n      <td>1600.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>13</td>\n      <td>5</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>6</td>\n      <td>6</td>\n      <td>2</td>\n      <td>1</td>\n      <td>16</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>20</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>0</td>\n      <td>4</td>\n      <td>1</td>\n      <td>4</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>6</td>\n      <td>6</td>\n      <td>2</td>\n      <td>8</td>\n      <td>43</td>\n      <td>0.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>16</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>0</td>\n      <td>4</td>\n      <td>1</td>\n      <td>4</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>6</td>\n      <td>6</td>\n      <td>0</td>\n      <td>6</td>\n      <td>54</td>\n      <td>0.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "   decile1b  decile3  lsat  ugpa  zfygpa  zgpa fulltime fam_inc male tier  \\\n0      10.0     10.0  44.0   3.5    1.33  1.88      1.0     5.0  0.0  4.0   \n1       5.0      4.0  29.0   3.5   -0.11 -0.57      1.0     4.0  0.0  2.0   \n2       8.0      7.0  37.0   3.4    0.63  0.37      1.0     3.0  1.0  4.0   \n3       8.0      7.0  43.0   3.3    0.67  0.34      1.0     4.0  0.0  4.0   \n4       3.0      2.0  41.0   3.3   -0.67 -1.30      1.0     4.0  0.0  5.0   \n\n    race  pass_bar  \n0  White       1.0  \n1  White       1.0  \n2  White       1.0  \n3  White       1.0  \n4  White       1.0  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>decile1b</th>\n      <th>decile3</th>\n      <th>lsat</th>\n      <th>ugpa</th>\n      <th>zfygpa</th>\n      <th>zgpa</th>\n      <th>fulltime</th>\n      <th>fam_inc</th>\n      <th>male</th>\n      <th>tier</th>\n      <th>race</th>\n      <th>pass_bar</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>10.0</td>\n      <td>10.0</td>\n      <td>44.0</td>\n      <td>3.5</td>\n      <td>1.33</td>\n      <td>1.88</td>\n      <td>1.0</td>\n      <td>5.0</td>\n      <td>0.0</td>\n      <td>4.0</td>\n      <td>White</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>5.0</td>\n      <td>4.0</td>\n      <td>29.0</td>\n      <td>3.5</td>\n      <td>-0.11</td>\n      <td>-0.57</td>\n      <td>1.0</td>\n      <td>4.0</td>\n      <td>0.0</td>\n      <td>2.0</td>\n      <td>White</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>8.0</td>\n      <td>7.0</td>\n      <td>37.0</td>\n      <td>3.4</td>\n      <td>0.63</td>\n      <td>0.37</td>\n      <td>1.0</td>\n      <td>3.0</td>\n      <td>1.0</td>\n      <td>4.0</td>\n      <td>White</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>8.0</td>\n      <td>7.0</td>\n      <td>43.0</td>\n      <td>3.3</td>\n      <td>0.67</td>\n      <td>0.34</td>\n      <td>1.0</td>\n      <td>4.0</td>\n      <td>0.0</td>\n      <td>4.0</td>\n      <td>White</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>3.0</td>\n      <td>2.0</td>\n      <td>41.0</td>\n      <td>3.3</td>\n      <td>-0.67</td>\n      <td>-1.30</td>\n      <td>1.0</td>\n      <td>4.0</td>\n      <td>0.0</td>\n      <td>5.0</td>\n      <td>White</td>\n      <td>1.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 65,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_loader = ACSPublicCoverageDataset(state=['CA'], year=2018, with_nulls=False, subsample_size=15_000, subsample_seed=42)\n",
+    "data_loader = LawSchoolDataset()\n",
     "data_loader.full_df.head()"
    ],
    "metadata": {
@@ -132,13 +132,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 86,
    "outputs": [
     {
      "data": {
-      "text/plain": "(15000, 19)"
+      "text/plain": "(20798, 12)"
      },
-     "execution_count": 66,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,19 +152,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 87,
    "outputs": [
     {
      "data": {
-      "text/plain": "2    8329\n1    6671\nName: SEX, dtype: int64"
+      "text/plain": "1.0    11675\n0.0     9123\nName: male, dtype: int64"
      },
-     "execution_count": 67,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_loader.full_df['SEX'].value_counts()"
+    "data_loader.full_df['male'].value_counts()"
    ],
    "metadata": {
     "collapsed": false
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 88,
    "outputs": [],
    "source": [
     "protected_groups = create_test_protected_groups(data_loader.X_data, data_loader.X_data, sensitive_attributes_dct)"
@@ -183,18 +183,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 89,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SEX_priv: 6671\n",
-      "SEX_dis: 8329\n",
-      "RAC1P_priv: 8478\n",
-      "RAC1P_dis: 6522\n",
-      "SEX&RAC1P_priv: 11415\n",
-      "SEX&RAC1P_dis: 3585\n"
+      "male_priv: 11675\n",
+      "male_dis: 9123\n",
+      "race_priv: 17491\n",
+      "race_dis: 3307\n",
+      "male&race_priv: 19068\n",
+      "male&race_dis: 1730\n"
      ]
     }
    ],
@@ -208,13 +208,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 90,
    "outputs": [
     {
      "data": {
-      "text/plain": "dict_keys(['SEX_priv', 'SEX_dis', 'RAC1P_priv', 'RAC1P_dis', 'SEX&RAC1P_priv', 'SEX&RAC1P_dis'])"
+      "text/plain": "dict_keys(['male_priv', 'male_dis', 'race_priv', 'race_dis', 'male&race_priv', 'male&race_dis'])"
      },
-     "execution_count": 70,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,18 +228,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 91,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SEX_priv: 0.445\n",
-      "SEX_dis: 0.555\n",
-      "RAC1P_priv: 0.565\n",
-      "RAC1P_dis: 0.435\n",
-      "SEX&RAC1P_priv: 0.761\n",
-      "SEX&RAC1P_dis: 0.239\n"
+      "male_priv: 0.561\n",
+      "male_dis: 0.439\n",
+      "race_priv: 0.841\n",
+      "race_dis: 0.159\n",
+      "male&race_priv: 0.917\n",
+      "male&race_dis: 0.083\n"
      ]
     }
    ],
@@ -252,19 +252,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 92,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SEX_priv: 0.395\n",
-      "SEX_dis: 0.357\n",
-      "RAC1P_priv: 0.363\n",
-      "RAC1P_dis: 0.388\n",
-      "SEX&RAC1P_priv: 0.374\n",
-      "SEX&RAC1P_dis: 0.374\n",
-      "overall: 0.374\n"
+      "male_priv: 0.899\n",
+      "male_dis: 0.878\n",
+      "race_priv: 0.921\n",
+      "race_dis: 0.723\n",
+      "male&race_priv: 0.906\n",
+      "male&race_dis: 0.713\n",
+      "overall: 0.89\n"
      ]
     }
    ],
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 92,
    "outputs": [],
    "source": [],
    "metadata": {
@@ -286,19 +286,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 93,
    "outputs": [
     {
      "data": {
-      "text/plain": "0    0\n1    0\n5    1\n6    1\n7    0\nName: PUBCOV, dtype: int64"
+      "text/plain": "2     1.0\n5     0.0\n7     0.0\n12    1.0\n18    1.0\nName: pass_bar, dtype: float64"
      },
-     "execution_count": 73,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_loader.y_data.iloc[protected_groups['SEX_priv'].index].head()"
+    "data_loader.y_data.iloc[protected_groups['male_priv'].index].head()"
    ],
    "metadata": {
     "collapsed": false
@@ -306,19 +306,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 94,
    "outputs": [
     {
      "data": {
-      "text/plain": "dtype('int64')"
+      "text/plain": "dtype('float64')"
      },
-     "execution_count": 74,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_loader.y_data.iloc[protected_groups['SEX_priv'].index].dtype"
+    "data_loader.y_data.iloc[protected_groups['male_priv'].index].dtype"
    ],
    "metadata": {
     "collapsed": false
@@ -326,10 +326,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 95,
    "outputs": [],
    "source": [
-    "filtered_df = data_loader.y_data.iloc[protected_groups['SEX_priv'].index].copy(deep=True)\n",
+    "filtered_df = data_loader.y_data.iloc[protected_groups['male_priv'].index].copy(deep=True)\n",
     "base_rate = filtered_df[filtered_df == 1].shape[0] / filtered_df.shape[0]"
    ],
    "metadata": {
@@ -338,13 +338,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 96,
    "outputs": [
     {
      "data": {
-      "text/plain": "0.3951431569479838"
+      "text/plain": "0.8990149892933619"
      },
-     "execution_count": 76,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,13 +358,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 97,
    "outputs": [
     {
      "data": {
-      "text/plain": "2636"
+      "text/plain": "10496"
      },
-     "execution_count": 77,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,13 +378,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 98,
    "outputs": [
     {
      "data": {
-      "text/plain": "6671"
+      "text/plain": "11675"
      },
-     "execution_count": 78,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 98,
    "outputs": [],
    "source": [],
    "metadata": {
